# satoshop

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CRON_EXCHANGE_RATE_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENVIRONMENT_SETUP.md  GITHUB_ACTIONS_EXCHANGE_RATE_AUTOMATION.md  LICENSE  OPENGRAPH_COMPONENT_GUIDE.md  README.md  RENDER_CRON_SETUP.md  STATIC_CACHE_GUIDE.md  WEBHOOK_SETUP_GUIDE.md  build.sh  build_optimized.sh  docker-compose.yml  env.example  env.local.example  env.production.example  game-plan.md  main.py  manage.py  page.html  page2.html  pyproject.toml  render.yaml  requirements.txt  sample_worklog.md  store_encryption.key  todo.md  운영인수인계.md
.claude/: CLAUDE.md  settings.local.json
accounts/: admin.py  apps.py  auth_backends.py  forms.py  lnurl_service.py  models.py  nostr_service.py  urls.py  views.py
api/: admin.py  admin_views.py  apps.py  authentication.py  forms.py  models.py  nostr_auth.py  policies.py  serializers.py  services.py  urls.py  views.py
backlog/: config.yml
boards/: admin.py  apps.py  cache_utils.py  forms.py  hall_of_fame_views.py  meme_forms.py  meme_utils.py  meme_views.py  models.py  signals.py  urls.py  views.py
change-log/: 2025-11-08_expert_contract-font-bundle.md  2025-11-08_expert_contract-md-pdf.md  2025-11-08_expert_role-contact-inputs.md
expert/: admin.py  constants.py  consumers.py  contract_flow.py  emails.py  forms.py  models.py  payment_service.py  pdf_preview.py  routing.py  services.py  signature_assets.py  stats.py  urls.py  utils.py  views.py
file/: admin.py  forms.py  models.py  services.py  (+2 more)
(+1193 files in other folders)
